# GPT4FREE-TG_bot

./: .env example  .gitignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  webview.py
database/: db.py
handlers/: callback_handlers.py  commands.py  messages.py
keyboards/: inline.py  reply.py
middlewares/: middlewares.py
utils/: gpt_module.py  speach_to_text.py
