[project]
name = "gpt4free-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.19.0",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "g4f[search]>=0.5.0.4",
    "loguru>=0.7.3",
    "pydub==0.25.1",
    "speechrecognition==3.14.2",
]
